# 77xiangqi_tui

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: architecture.md  interaction.md
scripts/: capture-ui.ps1  check.ps1
src/: clipboard.rs  main.rs  runtime_log.rs  settings_config.rs
src/app/: mod.rs  settings_field.rs
src/book/: chessdb.rs  mod.rs  obk.rs  xqb.rs  zobrist_openbook.rs
src/engine/: analysis_store.rs  analysis_types.rs  mod.rs  pv_ui.rs  stream.rs
src/engine/protocol/: common.rs  mod.rs  ucci.rs  uci.rs
src/engine/uci_ucci_engine/: analyze_infinite.rs  analyze_infinite_line.rs  analyze_once.rs  engine_core.rs  engine_path.rs  handshake.rs  handshake_plan.rs  info_state.rs  mod.rs  process.rs  test_hook.rs  types.rs  ui_helpers.rs
src/game/: history.rs  mod.rs
src/input/: mod.rs
src/service/: analysis.rs  autoplay.rs  book.rs  book_async.rs  command.rs  engine.rs  engine_policy.rs  game.rs  mod.rs
src/ui/: format.rs  help.rs  hit.rs  layout.rs  mod.rs  settings_form.rs  style.rs
src/ui/board/: capture.rs  grid.rs  mod.rs  pieces.rs
src/xiangqi/: board.rs  mod.rs  play.rs  position.rs  rules.rs  side.rs  uci.rs
