[package]
name = "xiangqi_tui"
version = "0.1.0"
edition = "2024"
description = "77象棋 TUI 应用"
license = "MIT"

# 迁移期放宽 lint；模块接入完成后改为 warn/deny 并启用 `cargo check-strict`。
[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "allow"
too_many_lines = "allow"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
crossbeam-channel = "0.5"
getrandom = "0.3"
parking_lot = "0.12"
ratatui = "0.29"
unicode-width = "0.2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = "2"
urlencoding = "2"
